--- a/globals.css
+++ b/globals.css
@@ -7,6 +7,7 @@ html,
 body {
   margin: 0px;
   height: 100%;
+  overflow-y: auto; /* Allow vertical scrolling */
 }
 /* a blue color as a generic focus style */
 button:focus-visible {
