--- a/Contact/css/style.css
+++ b/Contact/css/style.css
@@ -11087,7 +11087,7 @@ h5,
 }
 
 .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
-    background: #00ff0a;
+    background: rgb(7 173 14);;
     color: #fff;
     font-weight: 800;
     -webkit-border-radius: 5px;
@@ -11113,7 +11113,7 @@ h5,
 @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav>.nav-item.cta>a {
         color: #fff;
-        background: #c8a97e;
+        background: #333333;
     }
 }
 
@@ -11147,7 +11147,7 @@ h5,
     left: 0;
     top: 0;
     margin-top: -130px;
-    background: #fff !important;
+    background: #333333 !important;
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
@@ -11160,12 +11160,12 @@ h5,
 }
 
 .ftco-navbar-light.scrolled .nav-item.active>a {
-    color: #c8a97e !important;
+    color: #00ff0a !important;
 }
 
 .ftco-navbar-light.scrolled .nav-item.cta>a {
     color: #fff !important;
-    background: #c8a97e;
+    background: #34ce57;
     border: none !important;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
@@ -11201,8 +11201,8 @@ h5,
 
 .ftco-navbar-light.scrolled .navbar-toggler {
     border: none;
-    color: rgba(0, 0, 0, 0.5) !important;
-    border-color: rgba(0, 0, 0, 0.5) !important;
+    color: rgb(21 255 0 / 50%) !important;
+    border-color: rgb(21 255 0 / 50%) !important;
     cursor: pointer;
     padding-right: 0;
     text-transform: uppercase;
@@ -11234,7 +11234,7 @@ h5,
 }
 
 .ftco-navbar-light.scrolled .navbar-brand {
-    color: #000000;
+    color: #34ce57;
 }
 
 .navbar-brand {
@@ -11587,7 +11587,7 @@ h5,
 }
 
 .btn.btn-primary {
-    background: #c8a97e;
+    background: #069e08;
     border: 1px solid #c8a97e;
     color: #fff;
 }
@@ -12862,7 +12862,7 @@ textarea.form-control {
 }
 
 .contact-section .contact-info p a {
-    color: #c8a97e;
+    color: #11ff00;
 }
 
 .contact-section .dbox {
