--- a/Contact/css/style.css
+++ b/Contact/css/style.css
@@ -11280,9 +11280,13 @@ h5,
 .hero-wrap.hero-wrap-2 .slider-text .bread {
     font-weight: 900;
     color: #fff;
-    font-size: 50px;
+    font-size: 150px;
 }
-
+@media (max-width: 768px) {
+    .hero-wrap.hero-wrap-2 .slider-text .bread {
+        font-size: 80px; /* Adjust the font size for smaller screens */
+    }
+}
 .hero-wrap.hero-wrap-2 .slider-text .breadcrumbs {
     text-transform: uppercase;
     font-size: 13px;
@@ -11588,14 +11592,14 @@ h5,
 
 .btn.btn-primary {
     background: #069e08;
-    border: 1px solid #c8a97e;
+    border: 1px solid #00ff0a;
     color: #fff;
 }
 
 .btn.btn-primary:hover {
-    border: 1px solid #c8a97e;
+    border: 1px solid #00ff0a;
     background: transparent;
-    color: #c8a97e;
+    color: #00ff0a;
 }
 
 .btn.btn-primary.btn-outline-primary {
